Fix T65402: Syntax error causes CPython assert